# LibtorchDeploy

./: CMakeLists.txt  main.cpp
include/: load.h
src/: load.cpp
